--- a/style.css
+++ b/style.css
@@ -123,7 +123,9 @@ body.light-mode #brandName:hover{
   height: 30px;
   vertical-align: middle;
   cursor: pointer;
-  bottom: 50px;
+
+  left: 820px;
+  bottom: 110px;
 }
 
 .switch-hero input {
